src/test/deca/context/invalid/resultats/test2_multiple_decl-cont.res
./src/test/deca/context/invalid/test2_multiple_decl.deca:16:7: Variable f was already defined
